# LocalChat

./: .gitignore  CMakeLists.txt  LocalChat.code-workspace  Makefile  README.md  appdiagram.wsd  asionotes.txt  build_all.sh  clean_all.sh  debug_notes.md  design.md  design.txt  main.cpp  notes.txt  socketproblems.txt  test_notes.md  version_changes.md
docs/: 3peersmbookpro.staplelog  4peerstrace.staplelog  architecture.md  architecture_notes.md  architecture_toplevel.wsd  asionotes.md  current_bugs.md  debug_notes.md  design.md  discovery_diagram.wsd  discovery_implementations.md  linux_notes.md  threadmodel.wsd
docs/archive/: architecture_notes.md
include/: BV.hpp  BVActor.hpp  BVActor_Bonjour.hpp  BVApp.hpp  BVApp_ConsoleClient.hpp  BVApp_ConsoleClient_Bonjour.hpp  BVAvahi_Common.hpp  BVBroker.hpp  BVChat.hpp  BVComponent.hpp  BVDiscovery.hpp  BVDiscovery_Avahi.hpp  BVDiscovery_Bonjour.hpp  BVEvent.hpp  BVLoggable.hpp  BVMessage.hpp  BVService.hpp  BVService_Avahi.hpp  BVService_Bonjour.hpp  BVSimplePollManager_Avahi.hpp  BVSubscriber.hpp  BVTCPCommon.hpp  BVTCPConnection.hpp  BVTCPConnectionManager.hpp  BVTCPSession.hpp  LC_Client.hpp  api_common.h  avahi_api.h  avahi_api_bridge.h  bonjour_api.h  bonjour_api_bridge.h  const.h  linked_list.h  threadsafequeue.hpp
logs/: .trace.log.swp
src/: BVActor.cpp  BVApp_ConsoleClient.cpp  BVApp_ConsoleClient_Bonjour.cpp  BVBroker.cpp  BVDiscovery_Avahi.cpp  BVDiscovery_Bonjour.cpp  BVService_Avahi.cpp  BVService_Bonjour.cpp  BVTCPConnection.cpp  BVTCPConnectionManager.cpp  BVTCPSession.cpp  CMakeLists.txt  Makefile  avahi_api.c  avahi_api_bridge.cpp  bonjour_api.c  bonjour_api_bridge.cpp  linked_list.c  main.cpp  threadsafequeue.cpp
sys/: fedora-linux-software
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  broker_test_Basic  broker_test_Basic.cpp  communication_test_Multiple_Components.cpp  component_mocks.cpp  component_mocks.hpp  component_test_Discovery_Basic.cpp  dns_sd_test_Registration  dns_sd_test_Registration.cpp  dns_sd_test_Registration[1]_include.cmake  dns_sd_test_Registration[1]_tests.cmake  linked_list_test_Basic  linked_list_test_Basic.cpp  test_notes.md
